<resources>
    <string name="app_name">ListadoProd</string>
    <string name="id">ID</string>
    <string name="limpiar">Limpiar</string>
    <string name="agregar">Agregar</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="precio">Precio</string>
    <string name="Eliminar" />
    <string name="Editar" />
    <string name="id_del_producto">ID del Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="_0">0</string>
    <string name="_0_00">0.00</string>
</resources>